@@ -43,7 +43,7 @@ setup(
         'zc.sourcefactory',
         'zc.table',
         'zdaemon',
-        'zeit.cms>=2.7.0.dev0',
+        'zeit.cms>=2.12.0.dev0',
         'zeit.connector>1.14.1',
         'zeit.content.author',
         'zeit.content.cp>=0.33.0',
