@@ -150,4 +150,11 @@
     factory=".article.ArticleMetadataUpdater"
     name="zeit.content.article.interfaces.IArticleMetadata"/>
 
+  <adapter
+    factory=".interfaces.IZONArticle"
+    for="zeit.cms.section.interfaces.IZONSection"
+    provides="zeit.cms.section.interfaces.ISectionMarker"
+    name="article"
+    />
+
 </configure>
