@@ -4,6 +4,7 @@
 from zeit.content.article.i18n import MessageFactory as _
 import zeit.cms.content.contentsource
 import zeit.cms.content.interfaces
+import zeit.cms.section.interfaces
 import zeit.content.article.edit.interfaces
 import zeit.content.article.source
 import zeit.content.cp.interfaces
@@ -80,6 +81,10 @@ class IArticle(IArticleMetadata, zeit.cms.content.interfaces.IXMLContent):
         the Content-Drehscheibe, where the only property information we have
         is in the XML and there is no head section.
         """
+
+
+class IZONArticle(IArticle, zeit.cms.section.interfaces.ISectionMarker):
+    pass
 
 
 class ArticleSource(zeit.cms.content.contentsource.CMSContentSource):
