@@ -7,6 +7,9 @@ zeit.content.article changes
 - Configure layouts for image and video blocks via external XML file (VIV-249,
   VIV-250).
 
+- Add IZONArticle marker interface so we can show some settings only for
+  non-ZMO articles (VIV-252).
+
 
 3.0.12 (2013-11-15)
 -------------------
